RESOLVED FIXED Bug 156538
Fix two coding mistakes in MathMLInlineContainerElement::childrenChanged
https://bugs.webkit.org/show_bug.cgi?id=156538
Summary Fix two coding mistakes in MathMLInlineContainerElement::childrenChanged
Frédéric Wang (:fredw)
Reported 2016-04-13 08:10:35 PDT
From the ChangeLog of attachment 276110 [details]: mathml/MathMLInlineContainerElement.cpp: The base wrapper of the <msqrt> element is actually the last child in the render tree. Selecting the correct wrapper makes presentation/mo-form-dynamic.html pass. The <math> element does not have anonymous child but is already a RenderMathMLRow, so we remove the special case for it.
Attachments
Patch (2.94 KB, patch)
2016-04-13 08:29 PDT, Frédéric Wang (:fredw)
darin: review+
Frédéric Wang (:fredw)
Comment 1 2016-04-13 08:29:55 PDT
Frédéric Wang (:fredw)
Comment 2 2016-04-13 09:16:11 PDT
Note You need to log in before you can comment on or make changes to this bug.